--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "motion": "^12.5.0",
     "next": "15.2.2",
     "next-sanity": "^9.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-measure": "^2.5.2",
+    "react-use-measure": "^2.1.7",
     "sass": "^1.85.1"
   },
   "devDependencies": {
