--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "motion": "^12.5.0",
     "next": "15.2.2",
     "next-sanity": "^9.9.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "typescript": "^5"
